force-app/src/objects/TR1__Contact_Address__c.object
<CustomObject>
    <fields>
        <fullName>TR1__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Address__c</fullName>
        <label>Contact Address</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Addresses</relationshipLabel>
        <relationshipName>Contact_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Street_Address__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contact Address</label>
    <nameField>
        <label>Contact Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>